# godot-midi

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  SConstruct  banner_logo.afphoto  banner_logo_long.afphoto  godot-midi-4.0.code-workspace  icon.afphoto  settings.gradle.kts
.github/: FUNDING.yml
.github/workflows/: builds.yml  codeql.yml
extension/: CMakeLists.txt  build.gradle.kts
extension/src/: AndroidManifest.xml  audio_stream_player_midi.cpp  audio_stream_player_midi.h  cute_sound.h  midi.cpp  midi.h  midi_importer.cpp  midi_importer.h  midi_parser.cpp  midi_parser.h  midi_player.cpp  midi_player.h  midi_resource.cpp  midi_resource.h  register_types.cpp  register_types.h  sf2_resource.cpp  sf2_resource.h  utility.cpp  utility.h
extension/src/java/org/godotengine/plugin/android/template/: GodotAndroidPlugin.kt
game/: Phoenix_MT-32.sf2.import  Pure Imagination.mid  Pure Imagination.mid.import  click_sfx.wav.import  export_presets.cfg  gerudo.mid  gerudo.mid.import  icon.png.import  main.tscn  melee.wav.import  metal-man-s-stage.mid.import  mii_channel.mid  mii_channel.mid.import  mii_channel.ogg.import  mii_channel_tempo_change.mid  mii_channel_tempo_change.mid.import  mii_channel_tempo_change.ogg.import  music_vis.gd  music_vis.gd.uid  note_vis_shader.gdshader  note_vis_shader.gdshader.uid  project.godot  soundfont.tscn  test_low_tempo.mid  test_low_tempo.mid.import  test_low_tempo.ogg.import  zeal.mid  zeal.mid.import  zeal.ogg.import
game/addons/godot_midi/: godot_midi.gd  godot_midi.gd.uid  godotmidi.gdextension  godotmidi.gdextension.uid  midi_import_plugin.gd  midi_import_plugin.gd.uid  midi_manager.gd  music_vis.gd  plugin.cfg  sf2_import_plugin.gd  sf2_import_plugin.gd.uid
game/addons/godot_midi/views/: checkerboard.gdshader  checkerboard.gdshader.uid  main_view.gd  main_view.gd.uid  main_view.tscn  note.gd  note.gd.uid  note.tscn  track.gd  track.gd.uid  track.tscn
game/forest/: Forest_Melody.ogg.import  forest_song_control.mid  forest_song_control.mid.import
test/: CMakeLists.txt
test/src/: test_godot_midi.cpp
tests/: .gitignore  test_midi_chunk_decoding.cpp
